[package]
name = "mir2_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "item_replace_tool",
    "map_replace_tool",
    "npc_replace_tool",
    "npcitem_replace_tool",
    "big_map_replace_tool",
    "wu_xian_tiao_zhan_replace_tool",
]
